# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracers"
version = "0.1.0"
description = "Tracer integration in post-processing for hydro codes"
readme = { file = "README.org", content-type = "text/x-org" }
requires-python = ">=3.10"
license = { text = "GPLv3" }
authors = [
  { name = "Max Jacobi" },
]
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
